# GenAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Phase_1_Implementation.md  Phase_2_Implementation.md  Phase_3_Implementation.md  README.md  alembic.ini  deployment.md  docker-compose.yml  femtech_medical_rag_agent.md  femtech_medical_rag_agent_1c8ca76d.plan.md  improvement.md  plan.md  project understanding.md  pyproject.toml  streamlit_app.py  test_llamaindex_migration.py
.cursor/plans/: complete_medical_agent_mvp_e58c2f24.plan.md  complete_missing_mvp_components_6ce45646.plan.md
.streamlit/: config.toml
agent/: __init__.py  graph.py
agent/nodes/: __init__.py  query_analyzer.py  reasoner.py  response_generator.py  retriever.py  risk_assessor.py
agent/prompts/: __init__.py  disclaimers.py  guardrails.py  response_templates.py  system_prompts.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_update_embedding_dimension.py  296c0237b66a_align_schema_with_llamaindex_.py  6b9963140451_drop_custom_columns_use_metadata_jsonb.py  7022893f7c55_rename_table_to_data_paper_chunks.py  aab1cbd02422_add_text_search_tsv_for_hybrid_search.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  exceptions.py
app/db/: __init__.py  base.py  models.py  session.py
app/services/: __init__.py  azure_document.py  azure_openai.py  gcp_storage.py  langfuse_client.py  llama_parser.py
data/golden_set/: .gitkeep
docs/: DATAFLOW.md  DATAFLOW_v2.md  DATA_COLLECTION_COMPREHENSIVE.md  Project_Overview.md  RAG_API_INTEGRATION.md  personalization-test-app-beta.md  project-2-mvp-user-facing-product.md
documentation/: ARCHITECTURE_EXPLAINED.md  IMPLEMENTATION_COMPLETE.md  LLAMAINDEX_MIGRATION.md  METADATA_FILTERING_GUIDE.md  PAPER_DELETION_GUIDE.md  QUICKSTART_METADATA_FILTERING.md  architecture.md  cloud-setup.md  tech-stack.md  user_input_schema.md
evaluation/: __init__.py
examples/: gitexample.md  metadata_filtering_example.py
infrastructure/gcp/: README.md  cloudrun.tf  main.tf  variables.tfvars.example
ingestion/: __init__.py  pipeline.py
ingestion/chunkers/: section_chunker.py
ingestion/embedders/: __init__.py  azure_embedder.py
ingestion/parsers/: __init__.py  document_result.py  fallback_parser.py  parser_facade.py  pdf_parser.py
old_documentation/: Project_Overview.md  TECHNICAL_DOCUMENTATION.md  cloud-setup.md  rough_overview.md
rag/: __init__.py  index.py  query_engine.py  retriever.py
scripts/: __init__.py  ingest_papers.py  init-db.sql  paper_deletion.py  quick_ingest.py  setup_infrastructure.py
streamlit/: .gitignore  ARCHITECTURE.md  Home.py  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  STREAMLIT_README.md  USER_GUIDE.md  admin_paper_deletion.py  app.py
tests/: __init__.py  test_embedding_pipeline.py  test_health.py  test_paper_deletion.py  test_pdf_parser.py  test_rag_retriever.py  test_section_chunker.py
(+91 files in other folders)
