[project]
name = "femtech-medical-rag-agent"
version = "0.1.0"
description = "A mobile-first diagnostic platform for women's vaginal health using RAG-based medical reasoning"
#readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FemTech Team" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # UI
    "streamlit>=1.28.0",
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",
    # Azure Services
    "openai>=1.12.0",
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    # Docling for vision-based PDF parsing
    "docling>=1.0.0",
    "docling-core>=1.0.0",
    # GCP Services
    "google-cloud-storage>=2.14.0",
    # LLM/Agent Frameworks
    "langgraph>=0.0.26",
    "langchain>=0.1.5",
    "langchain-openai>=0.0.5",
    "llama-index>=0.10.12",
    "llama-index-vector-stores-postgres>=0.1.1",
    "llama-index-embeddings-azure-openai>=0.1.3",
    "llama-index-llms-azure-openai>=0.1.3",
    "llama-index-readers-docling>=0.1.0",
    "llama-index-node-parser-docling>=0.1.0",
    # Reranking
    "sentence-transformers>=2.2.0",
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# Fallback PDF parser (optional, for offline parsing)
fallback-parser = [
    "pymupdf>=1.23.0",
]

# RAGAS evaluation framework
evaluation = [
    "ragas>=0.4.0,<1.0",
    "datasets>=2.0.0",
    "rapidfuzz>=3.0.0",
]

# All optional dependencies
all = [
    "pymupdf>=1.23.0",
    "ragas>=0.4.0,<1.0",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["medical_agent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

